--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,48 +48,66 @@
                 <ul class="jobs-list list">
                     <li class="jobs-list-item">
                         <img src="images/banking.jpg" alt="Banking App" width="360">
-                        <h2>Banking App Interface Concept</h2>
-                        <p>App</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Banking App Interface Concept</h2>
+                            <p>App</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/payment.jpg" alt="Cashless Payment" width="360">
-                        <h2>Cashless Payment</h2>
-                        <p>Marketing</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Cashless Payment</h2>
+                            <p>Marketing</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/meditation.jpg" alt="Meditation App" width="360">
-                        <h2>Meditation App</h2>
-                        <p>App</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Meditation App</h2>
+                            <p>App</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/taxi.jpg" alt="Taxi" width="360">
-                        <h2>Taxi Service</h2>
-                        <p>Marketing</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Taxi Service</h2>
+                            <p>Marketing</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/screen.jpg" alt="Ilustrations" width="360">
-                        <h2>Screen Ilustrations</h2>
-                        <p>Design</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Screen Ilustrations</h2>
+                            <p>Design</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/courses.jpg" alt="Online Courses" width="360">
-                        <h2>Online Courses</h2>
-                        <p>Marketing</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Online Courses</h2>
+                            <p>Marketing</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/stories.jpg" alt="Instagram Stories" width="360">
-                        <h2>Instagram Stories Concept</h2>
-                        <p>Design</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Instagram Stories Concept</h2>
+                            <p>Design</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/food.jpg" alt="Organic Food" width="360">
-                        <h2>Organic Food</h2>
-                        <p>Website</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Organic Food</h2>
+                            <p>Website</p>
+                        </div>
                     </li>
                     <li class="jobs-list-item">
                         <img src="images/coffee.jpg" alt="Coffee" width="360">
-                        <h2>Fresh Coffee</h2>
-                        <p>Website</p>
+                        <div class="jobs-list-item-text">
+                            <h2>Fresh Coffe</h2>
+                            <p>Website</p>
+                        </div>
                     </li>
             </ul>
             </div>
